--- a/src/app/Styles/header.scss
+++ b/src/app/Styles/header.scss
@@ -22,6 +22,7 @@
 
     .header_content {
       .title {
+        display: flex;
         font-size: 5rem;
         color: white;
         margin: 0;
