--- a/src/app/Styles/post_container.scss
+++ b/src/app/Styles/post_container.scss
@@ -174,14 +174,15 @@
 
           .tags {
             display: flex;
-            gap: 8px;
+            gap: 6px;
             flex-wrap: wrap;
 
             .tag {
               background: rgba(183, 237, 246, 0.1);
               color: #b7edf6;
               padding: 4px 8px;
-              border-radius: 4px;
+              margin: 0px;
+              border-radius: 8px;
               font-size: 0.85rem;
               transition: all 0.2s ease;
 
@@ -194,7 +195,7 @@
               background: rgba(255, 255, 255, 0.1);
               color: rgba(255, 255, 255, 0.6);
               padding: 4px 8px;
-              border-radius: 4px;
+              border-radius: 8px;
               font-size: 0.85rem;
             }
           }
