--- a/src/app/Styles/sidebar.scss
+++ b/src/app/Styles/sidebar.scss
@@ -140,9 +140,9 @@
 
 .category_item {
   cursor: pointer;
-  padding: 8px;
-  margin: 4px 6px;
-  border-radius: 5px;
+  padding: 8px 12px;
+  margin: 4px 0px;
+  // border-radius: 5px;
   transition: background-color 0.3s ease;
   display: flex;
   justify-content: space-between;
@@ -180,7 +180,7 @@
   }
 
   &.active {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.05);
   }
 
   .external_link {
