--- a/src/app/Styles/mobile_header.scss
+++ b/src/app/Styles/mobile_header.scss
@@ -161,6 +161,7 @@
         .left_section {
           display: flex;
           align-items: center;
+          color: white;
           .lang_btn {
             color: #b7edf6;
           }
