--- a/src/app/Styles/post_modal.scss
+++ b/src/app/Styles/post_modal.scss
@@ -13,7 +13,7 @@
     background-color: rgb(30, 30, 30);
     border-radius: 8px;
     width: 100%;
-    max-width: 1240px;
+    max-width: 1500px;
     max-height: 92vh;
     overflow-y: hidden;
     position: relative;
@@ -401,8 +401,6 @@
 
           .image-container {
             width: 100%;
-            max-width: 720px;
-            height: 480px;
             margin: 32px auto;
             display: flex;
             align-items: center;
@@ -410,15 +408,19 @@
             background: rgba(0, 0, 0, 0.03);
             border-radius: 8px;
             overflow: hidden;
+            position: relative;
 
             img {
-              max-width: 100%;
-              max-height: 100%;
-              width: auto;
+              width: 100%;
               height: auto;
-              object-fit: contain;
+              object-fit: cover;
               display: block;
               margin: 0 auto;
+            }
+
+            @media screen and (max-width: 768px) {
+              max-width: 100%;
+              margin: 16px auto;
             }
           }
         }
@@ -574,5 +576,16 @@
 
   code {
     background: none !important;
+  }
+}
+
+.dynamic-thumbnail {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 8px;
+  margin: 16px 0;
+
+  @media screen and (max-width: 768px) {
+    aspect-ratio: 3/2;
   }
 }
