--- a/src/app/Styles/tag.scss
+++ b/src/app/Styles/tag.scss
@@ -7,4 +7,12 @@
   color: #b7edf6;
   font-size: 0.8rem;
   font-weight: 500;
+
+  &.clickable {
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba(183, 237, 246, 0.2);
+    }
+  }
 }
