--- a/src/app/Styles/globals.scss
+++ b/src/app/Styles/globals.scss
@@ -1,44 +1,40 @@
+@import "./variables";
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-mono: #{$font-mono};
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 14, 41, 84, 0;
   --background-end-rgb: 31, 110, 140, 0;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
   --secondary-glow: radial-gradient(rgb(50, 50, 50), rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 
-  --breakpoint-desktop: 1280px;
-  --breakpoint-tablet: 1024px;
-  --breakpoint-mobile: 768px;
+  --breakpoint-desktop: #{$bp-desktop};
+  --breakpoint-tablet: #{$bp-tablet};
+  --breakpoint-mobile: #{$bp-mobile};
 }
 
 @media (prefers-color-scheme: dark) {
@@ -48,24 +44,20 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -84,28 +76,32 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #000000;
+  background-color: $color-black;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
 button {
   border: none;
   width: 28px;
   background: none;
   cursor: pointer;
 }
+
 body::-webkit-scrollbar {
   width: 5px;
 }
+
 body::-webkit-scrollbar-track {
-  background-color: #000000;
+  background-color: $color-black;
 }
+
 body::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  background-image: linear-gradient(180deg, #0e2954 0%, #2e6b99 99%);
+  background-image: linear-gradient(180deg, $color-primary-dark 0%, $color-primary-light 99%);
 }
 
 @media (prefers-color-scheme: dark) {
