--- a/src/app/Styles/post_detail.scss
+++ b/src/app/Styles/post_detail.scss
@@ -1,8 +1,11 @@
+@import "./variables";
+@import "./mixins";
+
 .post_detail {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  color: white;
+  color: $color-white;
 
   .post_header {
     margin-bottom: 32px;
@@ -64,7 +67,7 @@
       background-color: rgba(255, 255, 255, 0.1);
       padding: 0.2em 0.4em;
       border-radius: 3px;
-      font-family: monospace;
+      font-family: $font-mono;
     }
 
     blockquote {
